--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -2,30 +2,32 @@
 Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
+
+refer to http://ionicons.com/ for more icons
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
 
-  <!-- Dashboard Tab -->
-  <ion-tab title="Home" icon-off="ion-ios7-home-outline" icon-on="ion-ios7-home" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <!-- Database Tab -->
+  <ion-tab title="Database" icon-off="ion-ios7-analytics-outline" icon-on="ion-ios7-analytics" href="#/tab/home">
+    <ion-nav-view name="tab-home"></ion-nav-view>
   </ion-tab>
 
 
   <!-- Chats Tab -->
-  <ion-tab title="Chats" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/chats">
+<!--   <ion-tab title="Chats" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/chats">
     <ion-nav-view name="tab-chats"></ion-nav-view>
+  </ion-tab> -->
+
+  <!-- Links Tab -->
+  <ion-tab title="Links" icon-off="ion-earth" icon-on="ion-earth" href="#/tab/links">
+    <ion-nav-view name="tab-links"></ion-nav-view>
   </ion-tab>
 
-  <!-- Friends Tab -->
-  <ion-tab title="Friends" icon-off="ion-ios7-heart-outline" icon-on="ion-ios7-heart" href="#/tab/friends">
-    <ion-nav-view name="tab-friends"></ion-nav-view>
-  </ion-tab>
 
-
-  <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <!-- About Tab -->
+  <ion-tab title="About" icon-off="ion-help-circled" icon-on="ion-help-circled" href="#/tab/about">
+    <ion-nav-view name="tab-about"></ion-nav-view>
   </ion-tab>
 
 
