Changed links and icons, currently placeholders.

--- a/www/templates/tab-links.html
+++ b/www/templates/tab-links.html
@@ -4,6 +4,7 @@
       <ion-item class="item-avatar" ng-repeat="link in links" type="item-text-wrap" href="{{link.link}}">
         <img ng-src="{{link.img}}">
         <h2>{{link.name}}</h2>
+        <p>{{link.notes}}</p>
       </ion-item>
     </ion-list>
     <!-- <div class="list card">
