added logo to main page

--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -1,6 +1,5 @@
-<ion-view view-title="Selector E: WIXOSS Translation Application">
+<ion-view view-title="<img class src='img/selectorelogo.png' height = 42 />">
   <ion-content class="padding">
-
   <!-- start of my cards -->
       <div class="col-md-0">
       <!--Sidebar snippet-->
