Attempt to fix the title logo by switching to nav-title

--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -1,4 +1,7 @@
-<ion-view view-title="<img class src='../img/selectorelogo.png' height = 42 />">
+<ion-view view-title="">
+  <ion-nav-title>
+      <img class src='img/selectorelogo.png' height = 42 />
+    </ion-nav-title>
   <ion-content class="padding">
   <!-- start of my cards -->
       <div class="col-md-0">
