minor aesthetic changes

--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -1,6 +1,6 @@
-<ion-view view-title="">
+<ion-view view-title=""  animation="fade-in-out">
   <ion-nav-title>
-      <img class src='img/selectorelogo.png' height = 42 />
+      <img class src='img/selectorelogo.png' height = "42" />
     </ion-nav-title>
   <ion-content class="padding">
   <!-- start of my cards -->
