--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,11 +5,11 @@ navigation history that also transitions its views in and out.
 
 refer to http://ionicons.com/ for more icons
 -->
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-tabs class="tabs-striped tabs-icon-top tabs-color-active-positive">
 
 
   <!-- Database Tab -->
-  <ion-tab title="Database" icon-off="ion-ios7-analytics-outline" icon-on="ion-ios7-analytics" href="#/tab/home">
+  <ion-tab title="Database" icon-off="ion-android-book" icon-on="ion-android-book" href="#/tab/home">
     <ion-nav-view name="tab-home"></ion-nav-view>
   </ion-tab>
 
