--- a/www/templates/tab-about.html
+++ b/www/templates/tab-about.html
@@ -1,6 +1,16 @@
 <ion-view view-title="About" >
+  <ion-nav-title>
+      <img class src='img/selectorelogo.png' height = "42" />
+  </ion-nav-title>
   <ion-content>
-    <ion-list>
+    <div class="card">
+      <div class="item item-text-wrap">
+        <p>Selector-E is an English translation application for WIXOSS, a Japanese trading card game produced by Takara Tomy.</p>
+
+        <p>Selector-E 2015</p>
+      </div>
+    </div>
+    <!-- <ion-list>
       <ion-item class="item-toggle">
         Power level
         <label class="toggle">
@@ -10,6 +20,6 @@
           </div>
         </label>
       </ion-item>
-    </ion-list>
+    </ion-list> -->
   </ion-content>
 </ion-view>
