--- a/www/templates/tab-links.html
+++ b/www/templates/tab-links.html
@@ -1,4 +1,7 @@
 <ion-view view-title="Links">
+  <ion-nav-title>
+      <img class src='img/selectorelogo.png' height = "42" />
+  </ion-nav-title>
   <ion-content>
     <ion-list>
       <ion-item class="item-avatar" ng-repeat="link in links" type="item-text-wrap" href="{{link.link}}">
