--- a/www/templates/tab-about.html
+++ b/www/templates/tab-about.html
@@ -1,4 +1,4 @@
-<ion-view view-title="About" >
+<ion-view view-title='<img class="title-image title-center" src="img/selectorelogo.png" height = "42" />'>
   <ion-nav-title>
       <img class src='img/selectorelogo.png' height = "42" />
   </ion-nav-title>
