--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -19,36 +19,28 @@ $positive:                        #3366FF !default;
 
 // $base-background-color:           #eee !default;
 
-.cardsingle.White{
+.carddivider.White, .cardsingle.White{
 	background-color: #FEFEFE;
 }
-.cardsingle.Green{
+.carddivider.Green, .cardsingle.Green{
 	background-color: #C1FFAB;
 }
-.cardsingle.Blue{
+.carddivider.Blue, .cardsingle.Blue{
 	background-color: #ABE2FF;
 }
-.cardsingle.Red{
+.carddivider.Red, .cardsingle.Red{
 	background-color: #FC6868;
 }
-.cardsingle.Black{
+.carddivider.Black, .cardsingle.Black{
 	background-color: #AAAAAA;
 }
-.cardsingle.Colorless{
+.carddivider.Colorless, .cardsingle.Colorless{
 	background-color: #EEEEEE;
 }
 
-// .cardsingle{
-// 	clear:both; 
-// 	height:11em; 
-// 	box-sizing: border-box;
-// 	padding: 0.5em 1em 0.5em 1em;
-// 	margin-bottom: 0.5em; 
-// 	border: 5px solid #BBBBBB;
-// 	margin-right:1em;
-// 	display:block;
-// 	overflow:auto;
-// }
+select{
+	width:100%;
+}
 
 .list .item.item-accordion {
   line-height: 38px;
