--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,7 +5,7 @@ navigation history that also transitions its views in and out.
 
 refer to http://ionicons.com/ for more icons
 -->
-<ion-tabs class="tabs-striped tabs-icon-top tabs-color-active-positive">
+<ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
 
   <!-- Database Tab -->
