Added a condensed view toggle

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -43,9 +43,9 @@ select{
 }
 
 .list .item.item-accordion {
-  line-height: 38px;
-  padding-top: 0;
-  padding-bottom: 0;
+  // line-height: 38px;
+  // padding-top: 0;
+  // padding-bottom: 0;
   transition: 0.09s all linear;
   overflow: auto;
 }
