--- a/www/templates/tab-about.html
+++ b/www/templates/tab-about.html
@@ -10,16 +10,16 @@
         <p>Selector-E 2015</p>
       </div>
     </div>
-    <!-- <ion-list>
+    <ion-list>
       <ion-item class="item-toggle">
-        Power level
+        Condensed View
         <label class="toggle">
-          <input type="checkbox" ng-model="settings.enableFriends">
+          <input type="checkbox" ng-model="settings.enableCondensed" ng-change="condenser()">
           <div class="track">
             <div class="handle"></div>
           </div>
         </label>
       </ion-item>
-    </ion-list> -->
+    </ion-list>
   </ion-content>
 </ion-view>
