--- a/www/templates/tab-about.html
+++ b/www/templates/tab-about.html
@@ -12,7 +12,7 @@
     </div>
     <ion-list>
       <ion-item class="item-toggle">
-        Condensed View
+        Expand all
         <label class="toggle">
           <input type="checkbox" ng-model="settings.enableCondensed" ng-change="condenser()">
           <div class="track">
