--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -19,6 +19,10 @@ $positive:                        #3366FF !default;
 
 // $base-background-color:           #eee !default;
 
+body {
+  cursor: url('http://ionicframework.com/img/finger.png'), auto;
+}
+
 .carddivider.White, .cardsingle.White{
 	background-color: #FEFEFE;
 }
@@ -55,6 +59,29 @@ select{
 .list .item.item-accordion.ng-hide-add,
 .list .item.item-accordion.ng-hide-remove {
   display: block !important;
+}
+
+.list.ng-enter,
+.list.ng-leave {
+  -webkit-transition:150ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  transition:150ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+}
+
+.list.ng-enter{
+  left:100%;
+}
+
+.list.ng-enter.ng-enter-active {
+  left:0;
+}
+
+.list.ng-leave{
+  left:0;
+}
+
+
+.list.ng-leave.ng-leave-active {
+	left:-100%;
 }
 
 // The path for our ionicons font files, relative to the built CSS in www/css
