--- a/www/templates/tab-about.html
+++ b/www/templates/tab-about.html
@@ -10,7 +10,7 @@
         <p>Selector-E 2015</p>
       </div>
     </div>
-    <ion-list>
+   <!--  <ion-list>
       <ion-item class="item-toggle">
         Expand all
         <label class="toggle">
@@ -20,6 +20,6 @@
           </div>
         </label>
       </ion-item>
-    </ion-list>
+    </ion-list> -->
   </ion-content>
 </ion-view>
