--- a/www/templates/tab-about.html
+++ b/www/templates/tab-about.html
@@ -7,19 +7,8 @@
       <div class="item item-text-wrap">
         <p>Selector-E is an English translation application for WIXOSS, a Japanese trading card game produced by Takara Tomy.</p>
 
-        <p>Selector-E 2015</p>
+        <p>Selector-E &copy; 2015</p>
       </div>
     </div>
-   <!--  <ion-list>
-      <ion-item class="item-toggle">
-        Expand all
-        <label class="toggle">
-          <input type="checkbox" ng-model="settings.enableCondensed" ng-change="condenser()">
-          <div class="track">
-            <div class="handle"></div>
-          </div>
-        </label>
-      </ion-item>
-    </ion-list> -->
   </ion-content>
 </ion-view>
