--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -13,6 +13,11 @@ refer to http://ionicons.com/ for more icons
     <ion-nav-view name="tab-home"></ion-nav-view>
   </ion-tab>
 
+  <!-- Favorites Tab -->
+  <ion-tab title="Favorites" icon-off="ion-android-star" icon-on="ion-android-star" href="#/tab/favorites">
+    <ion-nav-view name="tab-favorites"></ion-nav-view>
+  </ion-tab>
+
   <!-- Links Tab -->
   <ion-tab title="Links" icon-off="ion-earth" icon-on="ion-earth" href="#/tab/links">
     <ion-nav-view name="tab-links"></ion-nav-view>
