--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -42,7 +42,7 @@ body {
 	background-color: #EEEEEE;
 }
 
-label.checkbox.checkbox-energized{
+label.checkbox.checkbox-balanced{
 	top:12px;
 }
 
@@ -93,13 +93,6 @@ select{
 
 .item-toggle.item{
 	padding-top: 10px;
-}
-
-.tab-item{
-	// margin-top: 2px;
-}
-.tab-item-active{
-	// margin-top: 2px;
 }
 
 .favicon-normal{
