--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -35,7 +35,7 @@ body {
 .carddivider.Colorless, .cardsingle.Colorless {
   background-color: #EEEEEE; }
 
-label.checkbox.checkbox-energized {
+label.checkbox.checkbox-balanced {
   top: 12px; }
 
 select {
