--- a/www/templates/tab-about.html
+++ b/www/templates/tab-about.html
@@ -5,8 +5,8 @@
   <ion-content>
     <div class="card">
       <div class="item item-text-wrap">
-        <p>Selector-E is an English translation application for WIXOSS, a Japanese trading card game produced by Takara Tomy.</p>
-
+        Selector-E is an English translation application for WIXOSS, a Japanese trading card game produced by Takara Tomy.
+        <br/>
         <p>Selector-E &copy; 2015</p>
       </div>
     </div>
