--- a/www/templates/tab-favorites.html
+++ b/www/templates/tab-favorites.html
@@ -25,9 +25,9 @@
         </div>
           {{card.cardText}}
           <br/>
-        <label class="checkbox checkbox-energized">
+        <label class="checkbox checkbox-balanced">
         <input type="checkbox" ng-click="setCard(card.id, card.favorite)"></label>
-        <span class="favorite">Favorite</span>
+        <span class="favorite">Unfavorite</span>
       </div>
 
     </div>
