--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,10 +1,4 @@
-<!--
-Create tabs with an icon and label, using the tabs-positive style.
-Each tab's child <ion-nav-view> directive will have its own
-navigation history that also transitions its views in and out.
-
-refer to http://ionicons.com/ for more icons
--->
+<!-- tabs structure for ionic-->
 <ion-tabs class="tabs-icon-top tabs-color-active-balanced">
 
 
@@ -22,7 +16,6 @@ refer to http://ionicons.com/ for more icons
   <ion-tab title="Links" icon-off="ion-earth" icon-on="ion-earth" href="#/tab/links">
     <ion-nav-view name="tab-links"></ion-nav-view>
   </ion-tab>
-
 
   <!-- About Tab -->
   <ion-tab title="About" icon-off="ion-help-circled" icon-on="ion-help-circled" href="#/tab/about">
