--- a/www/templates/tab-favorites.html
+++ b/www/templates/tab-favorites.html
@@ -26,7 +26,7 @@
           {{card.cardText}}
           <br/>
         <label class="checkbox checkbox-balanced">
-        <input type="checkbox" ng-click="setCard(card.id, card.favorite)"></label>
+        <input type="checkbox" ng-checked="card.favorite == 1" ng-click="setCard(card.id, card.favorite)"></label>
         <span class="favorite">Unfavorite</span>
       </div>
 
